--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   admin:
-    image: uscictdocker/mentor-admin:4.2.0-alpha.49
+    image: mentorpal/mentor-admin:4.2.0-alpha.50
     environment:
       - NODE_ENV
       - GRAPHQL_ENDPOINT=http://graphql:3001/graphql
@@ -34,7 +34,7 @@ services:
         target: /app/shared
         read_only: true
   chat:
-    image: uscictdocker/mentor-client:4.2.0-alpha.10
+    image: mentorpal/mentor-client:4.2.0-alpha.13
     environment:
       - MENTOR_API_URL=/classifier
     depends_on:
