--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   admin:
-    image: mentorpal/mentor-admin:4.2.0-alpha.52
+    image: mentorpal/mentor-admin:4.2.0
     environment:
       - NODE_ENV
       - GRAPHQL_ENDPOINT=http://graphql:3001/graphql
@@ -12,7 +12,7 @@ services:
         source: ./build/run/.env
         target: /app/.env
   classifier:
-    image: mentorpal/mentor-classifier-api:4.2.0-alpha.13
+    image: mentorpal/mentor-classifier-api:4.2.0
     depends_on:
       - redis
     links:
@@ -34,7 +34,7 @@ services:
         target: /app/shared
         read_only: true
   chat:
-    image: mentorpal/mentor-client:4.2.0-alpha.13
+    image: mentorpal/mentor-client:4.2.0
     environment:
       - MENTOR_API_URL=/classifier
     depends_on:
@@ -44,7 +44,7 @@ services:
         source: ./build/run/.env
         target: /app/.env
   graphql:
-    image: mentorpal/mentor-graphql:4.2.0-alpha.13
+    image: mentorpal/mentor-graphql:4.2.0
     environment:
       - NODE_ENV
       - MONGO_URI
@@ -72,7 +72,7 @@ services:
   redis:
     image: 'redis:6-alpine'
   training:
-    image: mentorpal/mentor-classifier:4.2.0-alpha.13
+    image: mentorpal/mentor-classifier:4.2.0
     depends_on:
       - graphql
       - redis
@@ -100,7 +100,7 @@ services:
     # pub/sub instances share a redis via celery
     image: 'redis:6-alpine'
   upload-api:
-    image: mentorpal/mentor-upload-api:4.2.0-alpha.13
+    image: mentorpal/mentor-upload-api:4.2.0
     depends_on:
       - upload-redis
     environment:
@@ -116,7 +116,7 @@ services:
         source: ./uploads
         target: /app/uploads
   upload-worker:
-    image: mentorpal/mentor-upload-worker:4.2.0-alpha.13
+    image: mentorpal/mentor-upload-worker:4.2.0
     depends_on:
       - graphql
       - redis
