--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,19 +12,22 @@ services:
         source: ./build/run/.env
         target: /app/.env
   classifier:
-    image: mentorpal/mentor-classifier-api:4.3.0-alpha.2
-    depends_on:
-      - redis
+    image: mentorpal/mentor-classifier-api:4.4.0-alpha.4
     links:
       - graphql
-      - redis
     environment:
+      - CELERY_RESULT_BACKEND
       - CLASSIFIER_ARCH=mentor_classifier.arch.lr_transformer
+      - CLASSIFIER_CELERY_BROKER_URL
+      - CLASSIFIER_QUEUE_NAME
       - GRAPHQL_ENDPOINT=http://graphql:3001/graphql
       - MODEL_ROOT
       - SHARED_ROOT
       - STATUS_URL_FORCE_HTTPS
     volumes:
+      - type: bind
+        source: ./build/run/.env
+        target: /app/.env
       - type: bind
         source: ./models
         target: /app/models
@@ -69,24 +72,26 @@ services:
       - type: bind
         source: ./nginx/conf.d
         target: /etc/nginx/conf.d
-  redis:
-    image: 'redis:6-alpine'
   training:
-    image: mentorpal/mentor-classifier:4.3.0-alpha.2
+    image: mentorpal/mentor-classifier:4.4.0-alpha.4
     depends_on:
       - graphql
-      - redis
     entrypoint: /app/training_worker.sh
     environment:
+      - CELERY_RESULT_BACKEND
       - CLASSIFIER_ARCH=mentor_classifier.arch.lr_transformer
+      - CLASSIFIER_CELERY_BROKER_URL
+      - CLASSIFIER_QUEUE_NAME
       - GRAPHQL_ENDPOINT=http://graphql:3001/graphql
       - LOG_LEVEL_CLASSIFIER=DEBUG
       - MODEL_ROOT
       - SHARED_ROOT
     links:
       - graphql
-      - redis
     volumes:
+      - type: bind
+        source: ./build/run/.env
+        target: /app/.env
       - type: bind
         source: ./models
         target: /app/models
@@ -95,14 +100,10 @@ services:
         target: /app/shared
         read_only: true
   upload-api:
-    image: mentorpal/mentor-upload-api:4.3.0-alpha.6
-    depends_on:
-      - redis
+    image: mentorpal/mentor-upload-api:4.4.0-alpha.2
     environment:
       - UPLOAD_CELERY_BROKER_URL
       - UPLOAD_QUEUE_NAME
-    links:
-      - redis
     volumes:
       - type: bind
         source: ./build/run/.env
@@ -111,10 +112,9 @@ services:
         source: ./uploads
         target: /app/uploads
   upload-worker:
-    image: mentorpal/mentor-upload-worker:4.3.0-alpha.6
+    image: mentorpal/mentor-upload-worker:4.4.0-alpha.2
     depends_on:
       - graphql
-      - redis
     environment:
       - GRAPHQL_ENDPOINT=http://graphql:3001/graphql
       - TRANSCRIBE_MODULE_PATH=transcribe_aws
@@ -122,11 +122,7 @@ services:
       - UPLOAD_QUEUE_NAME
     links:
       - graphql
-      - redis
     volumes:
-      - type: bind
-        source: /Users/kirschner/projects/mentor-upload/mentor_upload_worker/src/mentor_upload_tasks
-        target: /app/mentor_upload_tasks
       - type: bind
         source: ./build/run/.env
         target: /app/.env
