--- a/shared/sentence-transformer/distilbert-base-nli-mean-tokens/0_Transformer/config.json
+++ b/shared/sentence-transformer/distilbert-base-nli-mean-tokens/0_Transformer/config.json
@@ -1,6 +1,8 @@
 {
   "activation": "gelu",
-  "architectures": ["DistilBertModel"],
+  "architectures": [
+    "DistilBertModel"
+  ],
   "attention_dropout": 0.1,
   "dim": 768,
   "dropout": 0.1,
