--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
         source: ./build/run/.env
         target: /app/.env
   graphql:
-    image: mentorpal/mentor-graphql:4.2.0
+    image: mentorpal/mentor-graphql:4.2.0-alpha.15
     environment:
       - NODE_ENV
       - MONGO_URI
