--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -31,7 +31,7 @@ server {
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
-        return 302 /chat;
+        return 302 /home;
     }
 
     location ~* /classifier {
@@ -54,6 +54,15 @@ server {
 
     location ~* /admin {
         proxy_pass http://admin;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location ~* /home {
+        proxy_pass http://home;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
