--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         target: /app/shared
         read_only: true
   chat:
-    image: mentorpal/mentor-client:4.3.0-alpha.27
+    image: mentorpal/mentor-client:4.2.0-alpha.28
     environment:
       - MENTOR_API_URL=/classifier
     depends_on:
@@ -44,7 +44,7 @@ services:
         source: ./build/run/.env
         target: /app/.env
   graphql:
-    image: mentorpal/mentor-graphql:4.3.0-alpha.16
+    image: mentorpal/mentor-graphql:4.2.0-alpha.15
     environment:
       - NODE_ENV
       - MONGO_URI
@@ -53,7 +53,8 @@ services:
         source: ./build/run/.env
         target: /app/.env
   home:
-    image: uscictdocker/mentor-home-page:4.4.0-alpha.5
+    image: uscictdocker/mentor-home-page:4.4.0-alpha.6
+    # image: uscictdocker/mentor-home-page:4.4.0-alpha.5
     depends_on:
       - graphql
     volumes:
