--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -31,7 +31,7 @@ server {
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
-        return 302 /home;
+        return 302 /home/;
     }
 
     location ~* /classifier {
@@ -61,8 +61,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location ~* /home {
-        proxy_pass http://home;
+    location ~* /home/ {
+        proxy_pass http://home/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
