--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,8 @@
 server {
     listen 80;
     server_name nodeserver;
+    # this prevents infinite loops when nginx is running on http and CloudFront is https
+    absolute_redirect off;
 
     location / {
         if ($request_method = 'OPTIONS') {
@@ -31,7 +33,7 @@ server {
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
         }
-        return 302 /home;
+        return 302 /home/;
     }
 
     location ~* /classifier {
